Add components MyPosts and Post

--- a/src/Content/Header/Header.module.css
+++ b/src/Content/Header/Header.module.css
@@ -1,6 +1,6 @@
 .header {
 grid-area: h;
-    background-color: lightskyblue;
+    background-color: lightsalmon;
 }
 .txt {
     text-align: center;
