--- a/src/Content/NavBar/NavBar.module.css
+++ b/src/Content/NavBar/NavBar.module.css
@@ -1,11 +1,19 @@
 .navbar {
     grid-area: n;
-    background-color: antiquewhite;
+    background-color: navajowhite;
 }
-.item {
+.itemMenu {
     display: block;
 
+
 }
-.item div {
+.itemMenu div {
     padding-bottom: 1rem;
+    padding-top: 1em;
+
+}
+.itemMenu a {
+    text-decoration: none;
+    color: dodgerblue;
+    padding-left: 1em;
 }
