--- a/src/Content/Profile/Profile.module.css
+++ b/src/Content/Profile/Profile.module.css
@@ -1,6 +1,6 @@
 .profile {
-    grid-area: c;
-    background-color: gainsboro;
+    /*grid-area: c;*/
+    /*background-color: cornsilk;*/
 }
 img {
     height: 200px;
