Added component Profile.Info

--- a/src/Content/Profile/MyPosts/MyPosts.module.css
+++ b/src/Content/Profile/MyPosts/MyPosts.module.css
@@ -1,3 +1,10 @@
-.item {
-
+.profileblock {
+    padding: 1em;
+}
+.btn div {
+    display: inline-block;
+    padding: 5px;
+}
+.btn button:hover {
+    background-color: lightskyblue;
 }
