There was added function updateNewMessageData into Dialogs.js

--- a/src/Content/Dialogs/Dialogs.module.css
+++ b/src/Content/Dialogs/Dialogs.module.css
@@ -14,3 +14,15 @@ padding: 10px;
 .messages div {
     margin: 1em;
 }
+
+/*Send message block*/
+
+.textarea {
+    margin: 1em;
+}
+.sendMessage {
+    margin: 1em;
+}
+.sendMessage button:hover {
+    background-color: lightskyblue;
+}
