--- a/src/Content/Dialogs/Dialogs.module.css
+++ b/src/Content/Dialogs/Dialogs.module.css
@@ -1,30 +1,39 @@
-.dialogs {
-display: grid;
+.dialogs
+{
+    display: grid;
+
     grid-template-columns: 2fr 10fr;
 }
-.dialogsItems {
-padding: 10px;
-    text-decoration: none;
+.dialogsItems
+{
+    padding: 10px;
 
+    text-decoration: none;
 }
-.messages {
-padding: 10px;
+.messages
+{
+    padding: 10px;
 }
-.dialog {
+.dialog
+{
     margin: 1em;
 }
-.messages div {
+.messages div
+{
     margin: 1em;
 }
 
 /*Send message block*/
 
-.textarea {
+.textarea
+{
     margin: 1em;
 }
-.sendMessage {
+.sendMessage
+{
     margin: 1em;
 }
-.sendMessage button:hover {
+.sendMessage button:hover
+{
     background-color: lightskyblue;
 }
