--- a/src/Content/Users/Users.module.css
+++ b/src/Content/Users/Users.module.css
@@ -1,18 +1,24 @@
-.userBlock .value {
+.userBlock .value
+{
     display: inline-block;
+
+    margin: 1em;
+}
+.userBlock
+{
     margin: 1em;
 
-}
-.userBlock {
     border: 1px solid dodgerblue;
     border-radius: 10px;
-    margin: 1em;
 }
-.status {
+.status
+{
     display: block;
+
     margin: 1em;
 }
-.imgPerson {
+.imgPerson
+{
     width: 100px;
     height: 100px;
 }
