--- a/src/Components/Users/Users.module.css
+++ b/src/Components/Users/Users.module.css
@@ -22,39 +22,17 @@
     width: 100px;
     height: 100px;
 }
-
-.ldsRing {
-    display: inline-block;
-    position: relative;
-    width: 80px;
-    height: 80px;
+.btns {
+    display: flex;
+    border: 1px solid dodgerblue;
+    border-radius: 10px;
+    min-height: 3rem;
+    margin: 1em;
+    padding: .5rem
 }
-.ldsRing div {
-    box-sizing: border-box;
-    display: block;
-    position: absolute;
-    width: 64px;
-    height: 64px;
-    margin: 8px;
-    border: 8px solid green;
-    border-radius: 50%;
-    animation: ldsRing 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-    border-color: skyblue transparent transparent transparent;
+.btns > div {
+    margin: 1rem;
 }
-.ldsRing div:nth-child(1) {
-    animation-delay: -0.45s;
-}
-.ldsRing div:nth-child(2) {
-    animation-delay: -0.3s;
-}
-.ldsRing div:nth-child(3) {
-    animation-delay: -0.15s;
-}
-@keyframes ldsRing {
-    0% {
-        transform: rotate(0deg);
-    }
-    100% {
-        transform: rotate(360deg);
-    }
+.btns > button {
+  margin: 0 1rem;
 }
