--- a/src/Components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/Components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -3,7 +3,7 @@
     /*background-color: cornsilk;*/
 }
 img {
-    height: 200px;
-    overflow:hidden;
-    width:100%;
+    max-height: 200px;
+   max-width: 200px;
+
 }
